--- a/TwitterPractice/Base.lproj/Main.storyboard
+++ b/TwitterPractice/Base.lproj/Main.storyboard
@@ -35,11 +35,19 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a8v-pd-tES" id="yYR-9g-jaD">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="37h-TF-3KV">
-                                                    <rect key="frame" x="10" y="10" width="50" height="50"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="37h-TF-3KV">
+                                                    <rect key="frame" x="5" y="10" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="G1B-4r-5N7"/>
+                                                        <constraint firstAttribute="height" constant="50" id="dFd-zM-DFU"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Screen Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9b-IA-DR1">
-                                                    <rect key="frame" x="68" y="10" width="200" height="16"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Screen Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9b-IA-DR1">
+                                                    <rect key="frame" x="64" y="10" width="200" height="16"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="200" id="EzK-kU-jHB"/>
+                                                        <constraint firstAttribute="height" constant="16" id="vHq-fk-pdl"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -53,24 +61,28 @@
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Place" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gty-m9-VGg">
-                                                    <rect key="frame" x="68" y="131" width="300" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Place" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="gty-m9-VGg">
+                                                    <rect key="frame" x="64" y="131" width="280" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lwm-48-91R">
-                                                    <rect key="frame" x="68" y="31" width="240" height="88"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="Lwm-48-91R">
+                                                    <rect key="frame" x="64" y="28" width="280" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sTK-Dx-KwY">
-                                                    <rect key="frame" x="68" y="160" width="240" height="80"/>
+                                                    <rect key="frame" x="64" y="160" width="240" height="80"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="37h-TF-3KV" firstAttribute="leading" secondItem="yYR-9g-jaD" secondAttribute="leadingMargin" constant="-3" id="Xwg-uU-KVu"/>
                                                 <constraint firstItem="ucr-lt-81S" firstAttribute="top" secondItem="yYR-9g-jaD" secondAttribute="topMargin" constant="-1" id="ciy-WS-ZyF"/>
+                                                <constraint firstItem="37h-TF-3KV" firstAttribute="top" secondItem="B9b-IA-DR1" secondAttribute="top" id="fX3-W7-dnL"/>
+                                                <constraint firstItem="B9b-IA-DR1" firstAttribute="leading" secondItem="37h-TF-3KV" secondAttribute="trailing" constant="9" id="hLB-Du-OnE"/>
+                                                <constraint firstItem="37h-TF-3KV" firstAttribute="top" secondItem="yYR-9g-jaD" secondAttribute="topMargin" constant="2" id="l9Q-vZ-dla"/>
                                                 <constraint firstItem="ucr-lt-81S" firstAttribute="trailing" secondItem="yYR-9g-jaD" secondAttribute="trailingMargin" id="vuO-z9-4U8"/>
                                             </constraints>
                                         </tableViewCellContentView>
