--- a/TwitterPractice/Base.lproj/Main.storyboard
+++ b/TwitterPractice/Base.lproj/Main.storyboard
@@ -73,14 +73,15 @@
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J1f-rn-o70">
-                                                    <rect key="frame" x="64" y="78" width="70" height="20"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J1f-rn-o70">
+                                                    <rect key="frame" x="64" y="78" width="90" height="28"/>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="70" id="f5F-Pb-PDF"/>
-                                                        <constraint firstAttribute="height" constant="20" id="gMN-MI-MtO"/>
+                                                        <constraint firstAttribute="width" constant="90" id="f5F-Pb-PDF"/>
+                                                        <constraint firstAttribute="height" constant="28" id="gMN-MI-MtO"/>
                                                     </constraints>
-                                                    <state key="normal" title="Reply">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <state key="normal" title=" Reply" image="replyArrow">
                                                         <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
@@ -164,14 +165,15 @@
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y9r-7w-mDB">
-                                                    <rect key="frame" x="64" y="204" width="70" height="20"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y9r-7w-mDB">
+                                                    <rect key="frame" x="64" y="204" width="90" height="28"/>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="HO2-ZL-yyh"/>
-                                                        <constraint firstAttribute="width" constant="70" id="Zi0-Ld-u1Z"/>
+                                                        <constraint firstAttribute="height" constant="28" id="HO2-ZL-yyh"/>
+                                                        <constraint firstAttribute="width" constant="90" id="Zi0-Ld-u1Z"/>
                                                     </constraints>
-                                                    <state key="normal" title="Reply">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <state key="normal" title=" Reply" image="replyArrow">
                                                         <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
@@ -237,4 +239,7 @@
             <point key="canvasLocation" x="140" y="124"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="replyArrow" width="23" height="23"/>
+    </resources>
 </document>
